fix purchase btn placement bug

--- a/assets/viewer.scss
+++ b/assets/viewer.scss
@@ -51,7 +51,7 @@
   border-bottom: 3px solid #1fa7d6;
 }
 #toggler > a {
-  display: flex;
+  display: block;
   border: 2px solid #1fa7d6;
   margin: auto;
   text-align: center;
