update cta button

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -587,16 +587,16 @@ hr.highlight {
     font-size: 25px;
   }
 }
-.cta-btn .h2 {
+.cta-bttin .h2 {
   margin: 0 0 5px 0;
 }
-.cta-btn {
+.cta-bttin {
   background-color: transparent;
   color: white;
   border: 4px solid white;
   padding: 5px 8px;
 }
-.cta-btn:hover {
+.cta-bttin:hover {
   color: #1fa7d6 !important;
   border-color: #1fa7d6;
 }
@@ -607,19 +607,19 @@ hr.highlight {
   }
 } */
 @media (min-width: 992px) {
-  .cta-btn .h2 {
+  .cta-bttin .h2 {
     font-size: 32px;
     padding: 10px 16px;
   }
 }
 @media (max-width: 992px) {
-  .cta-btn .h2 {
+  .cta-bttin .h2 {
     font-size: 20px;
     padding: 8px 14px;
   }
 }
 @media (min-width: 768px) {
-  .cta-btn {
+  .cta-bttin {
     padding: 20px 22px;
   }
 }
