--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -43,11 +43,11 @@
         </button>
       </a> -->
 
-      <button class="cta-btn sharp btn btn-lg">
+      <a href="/collections/all" class="cta-bttin sharp btn btn-lg">
         <p class="h2">SHOP SUNGLASSES</p>
         <br>
         <span class="h4" style="font-weight: 900;">and change a life</span>
-      </button>
+      </a>
 
     </div>
 
@@ -340,7 +340,7 @@ src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab
 //         wH = $(window).height(),
 //         wS = $(this).scrollTop();
 //     if (wS > (hT+hH-wH-350)){
-      $('.odometer').html(3284);
+      $('.odometer').html(3314);
 //     }
   });
 </script>
