new collection bgs

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -331,6 +331,23 @@ hr.highlight {
 }
 /* End Blogs */
 /* Start Collections Page Styles */
+.collection-body-bg {
+  background: url("https://cdn.shopify.com/s/files/1/1321/8937/files/classic-div-bg-mw-3-final.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.classic-collection-bg {
+  background: url("https://cdn.shopify.com/s/files/1/1321/8937/files/classic-div-bg-ww-final.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -30px;
+}
+.bamboo-collection-bg {
+  background: url("https://cdn.shopify.com/s/files/1/1321/8937/files/bamboo-tree-o15-final.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -30px;
+}
 .new-product {
   position: absolute;
   left: 5%;
@@ -3884,7 +3901,6 @@ PRODUCT
     color: #aaa;
     font-size: 12px;
 }
-DS
 .product-list .product-item{
     margin-bottom: 30px;
 }
@@ -3911,6 +3927,9 @@ DS
 }
 .product-item .has-back-image:hover .back-image{
     opacity: 1;
+}
+.product-item .has-back-image:hover .top-image {
+  opacity: 0;
 }
 .product-item .gorup-button{
     right: 10px;
