--- a/templates/collection.columns4.liquid
+++ b/templates/collection.columns4.liquid
@@ -9,7 +9,7 @@
 
 <h1 class="jumbotron text-center shop-bamboo-banner white">Shop Bamboo</h1>
 
-<div class="main-container no-slidebar">
+<div class="main-container no-slidebar bamboo-collection-bg">
 	<div class="container">
 		<div class="row">
 			<div class="main-content col-sm-12">
