--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -20,7 +20,7 @@
 <h1 class="jumbotron text-center shop-all-banner hidden-xs">Shop</h1>
 <h1 class="jumbotron text-center shop-all-banner visible-xs" style="color: white;"><strong>Shop</strong></h1>
 
-<div class="main-container left-slidebar">
+<div class="main-container left-slidebar collection-body-bg">
   <div class="container">
     <div class="row">
       <div class="main-content col-xs-12">
