--- a/templates/collection.columns3.liquid
+++ b/templates/collection.columns3.liquid
@@ -1,7 +1,7 @@
 <h1 class="jumbotron text-center shop-classic-banner hidden-xs">Shop Classic</h1>
 <h1 class="jumbotron text-center shop-classic-banner visible-xs" style="color: white;"><strong>Shop Classic</strong></h1>
 
-<div class="main-container no-slidebar">
+<div class="main-container no-slidebar classic-collection-bg">
 	<div class="container">
 		<div class="row">
 			<div class="main-content col-sm-12">
