--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -10,313 +10,76 @@
 
 <div id="home-banner" class="no-pads col-xs-12 no-margin">
 
-
   <div class="hidden-xs text-center full-w video-text text-drop-shadow row-eq-height"
-       style="position: absolute;
-              width: 100%;
-              height: 100%;
-              background-color: rgba(0, 0, 0, .15);
-              z-index: 1;"
-       >
+    style="position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .15);
+    z-index: 1;"
+    >
 
     <div style="margin: auto;">
-
-<!--       <h1>We Are All Fellos</h1> -->
-      
       <h1>Vision Promotes Progress</h1>
-
-<!--       <span class="h2">Fello Friends <span class="blue">&middot;</span> </span>
-
-      <span class="h2">Fello Travelers <span class="blue">&middot;</span> </span>
-
-      <span class="h2">Fello Patrons <span class="blue">&middot;</span> </span>
-
-      <span class="h2">Fello Humanity</span> -->
-
       <span class="h3">Lack of vision translates to failure at school, work and health. Those who cannot see are often mired in poverty.</span>
-
       <hr class="minor-h-marg highlight" />
-
-<!--       <a href="/collections/all">
-        <button class="cta-btn sharp btn btn-lg">
-          <p class="h2">SHOP SUNGLASSES</p>
-        </button>
-      </a> -->
-
       <a href="/collections/all" class="cta-bttin sharp btn btn-lg">
         <p class="h2">SHOP SUNGLASSES</p>
         <br>
         <span class="h4" style="font-weight: 900;">and change a life</span>
       </a>
-
     </div>
-
   </div>
 
 
   <img class="hidden-xs" src="{{ 'blurred-vision-angle.jpg' | file_url }}" alt="Fello Eyewear">
-
-<!--   <div class="video-placeholder hidden-xs">
-  </div> -->
-<!--   <img class='full-w' src='{{ "vosh_poster.jpg" | asset_url }}'> -->
-<!--   <div class="video-wrapper hidden-xs" style="height: 0; position: absolute; top: 0;">
-     
-    <video autoplay loop muted preload=auto style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; pointer-events: none; width: 100%; height: 100%;" id="bg-video">
-      <source src="https://d5kbzi6svqh1a.cloudfront.net/hp_video.mp4" type="video/mp4">
-    </video>
-    
-  </div> -->
   
   <a href="/collections/all" title="shop" id="for-ios" class="hidden visible-xs">
     <img class="full-w" src="{{ 'fello-eyewear-welcome.jpg' | file_url }}" alt="Fello Eyewear">
   </a>
 </div>
 
-
-<div class="pillar">
-  <a class="full-w" href="/collections/bamboo" title="shop instagram">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp">
-
-      <img src="{{ 'shop_bamboo.jpg' | asset_url }}" alt="Shop Bamboo">
-
-      <div class="panel-body text-center">
-
-        <div class="pillar-cover row-eq-height">
-
-          <div class="v-center full-w">
-
-            <h2 class="white"><strong>SHOP BAMBOO</strong></h2>
-
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-  </a>
-</div>
-
-
-<!-- <div class="pillar">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel sharp">
-
-    <img src="{{ 'white_pillar.jpg' | asset_url }}" alt="Fello Ambassador">
-
-    <div class="panel-body outline">
-
-      <div class="pillar-cover row-eq-height">
-
-        <div class="v-center full-w">
-          <div class="widget widget_newletter">
-
-            <h2 class="text-center highlight visible-lg">Be A Fello</h2>
-            <p class="visible-lg text-center"><strong>Get 10% off any purchase!</strong><br /><small> Learn about our products end charitable causes.</small></p>
-            <p class="hidden-lg text-center"><span class="highlight"><strong>Be A Fello</strong></span><br /><small> Get 10% off any purchase!</small></p>
-
-            <form style="position: relative;" class="newletter" action="{{ settings.newsletter_form_action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
-              <input style="padding: 7px 15px;" class="email-text" type="text" name="newsletter" placeholder="Your email..." value="">
-              <span><button class="button add_to_cart_button" name="subscribe" id="subscribe" type="submit"><span class="icon pe-7s-angle-right"></span></button></span>
-            </form>
-
-          </div>
-        </div>
-
-
-      </div>
-
-    </div>
-  </div>
-</div> -->
-
-
-<div class="pillar">
-  <a class="full-w" href="/pages/find-your-face" title="shop instagram">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp">
-
-      <img src="{{ 'find-your-face.jpg' | file_url }}" alt="Find Your Face">
-
-      <div class="panel-body text-center">
-
-        <div class="pillar-cover row-eq-height">
-
-          <div class="v-center full-w">
-
-            <h2 class="white"><strong>FIND YOUR FACE</strong></h2>
-
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-  </a>
-</div>
-
-
-<div class="pillar">
-  <a class="full-w" href="/pages/collaborate" title="fello collaboration">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp">
-
-      <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Ambassador">
-
-      <div class="panel-body text-center">
-
-        <div class="pillar-cover row-eq-height">
-
-          <div class="v-center full-w">
-
-            <h2 class="white"><strong>COLLABORATE</strong></h2>
-
-            <!--           <h1 class="small-caps invisible visible-lg no-margin">Fello Ambassador</h1>
-<h4 class="small-caps invisible hidden-lg no-margin"><strong>Fello Ambassador</strong></h4> -->
-
-            <!--           <img class="minor-v-marg" style="width: 25%;" src="{{ 'fello_ambassador_white.png' | asset_url }}" alt="fello ambassador">    -->
-
-            <!--           <br /> -->
-            <!-- 
-<h4 class="invisible visible-lg no-margin">Get Paid to Spread the Love</h4>
-<p class="invisible hidden-lg no-margin"><small>Get Paid to Spread the Love</small></p> -->
-
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-  </a>
-</div>
-
-<div class="clear">
-  <br class="minor-v-marg collapse-for-ff" />
-</div>
-
-<!-- Not Mobile -->
-<div class="hidden-xs text-center sale-section">
-  <h2><span class="small-caps">Get Ready For Spring! Use Code:</span> <code>sprng</code></h2>
-  <h1 class="home-collection">10% Off All Classic Product Lines</h1>
-  <h2><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h2>
-</div>
-
-<!-- Mobile -->
-<div class="visible-xs text-center sale-section">
-  <h4><span class="small-caps">Get Ready For Spring! Use Code:</span> <code>sprng</code></h4>
-  <h1 class="home-collection">10% Off All Classic Product Lines</h1>
-  <h3><strong><a href="/collections/all"><span class="small-caps">Shop Sale</span> &gt;</a></strong></h3>
-</div>
-
-<div class="clear">
-  <br class="minor-v-marg collapse-for-ff" />
-</div>
-
-<!-- <div class="hidden-sm hidden-xs col-md-12">
-  <h1 class="home-collection">Best Sellers</h1>
-</div>
-<div class="hidden-md hidden-lg clear">
-  <br class="minor-v-marg collapse-for-ff" />
-</div>
-
-
-{% assign product = all_products['tortoise-fantom'] %}
-{% assign pro_img = 'fantom_hp.png' %}
-{% include 'product-halfwidth' %}
-
-{% assign product = all_products['konvoy'] %}
-{% assign pro_img = 'konvoy_hp.png' %}
-{% include 'product-halfwidth' %} -->
-
+{% include 'shop-sale' %}
 
 {% if settings.use_banner_carousel_home10 %}
 {% include 'shortcode-banner-slide'  %}
 {% endif %}
-    <div class="no-margin med-v-pads charity-hp full-w minor-h-pads">
-      <div class="row">
-        <h1 class="text-center">Help A Fello Out</h1>
-      </div>
+<div class="no-margin med-v-pads charity-hp full-w minor-h-pads">
+  <div class="row">
+    <h1 class="text-center">Help A Fello Out</h1>
+  </div>
 
-      <div class="hidden-xs row">
-        <br />
-        <h3 class="col-md-8 col-md-offset-2 minor-h-pads justify">
-          For every pair of sunglasses sold,
-          Fello donates $5 to VOSH.
-          You can also accompany us in our pursuit to raise awareness and
-          make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
-        </h3>
-        <br />
-      </div>
+  <div class="hidden-xs row">
+    <br />
+    <h3 class="col-md-8 col-md-offset-2 minor-h-pads justify">
+      For every pair of sunglasses sold,
+      Fello donates $5 to VOSH.
+      You can also accompany us in our pursuit to raise awareness and
+      make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
+    </h3>
+    <br />
+  </div>
 
-      <div class="visible-xs row">
-        <p class="col-md-8 col-md-offset-2 justify minor-h-pads">
-          For every pair of sunglasses sold,
-          Fello donates $5 to VOSH.
-          You can also accompany us in our pursuit to raise awareness and
-          make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
-        </p>
-      </div>
-      
-      <div class="row text-center count-wrap">
-        <h1 class="odometer highlight">Calculating...</h1>
-      </div>
-      <div class="row text-center minor-v-marg">
-        <h1 class="blue">Lives Changed</h1>
-      </div>
-      
-     </div>
+  <div class="visible-xs row">
+    <p class="col-md-8 col-md-offset-2 justify minor-h-pads">
+      For every pair of sunglasses sold,
+      Fello donates $5 to VOSH.
+      You can also accompany us in our pursuit to raise awareness and
+      make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
+    </p>
+  </div>
+
+  <div class="row text-center count-wrap">
+    <h1 class="odometer highlight">Calculating...</h1>
+  </div>
+  <div class="row text-center minor-v-marg">
+    <h1 class="blue">Lives Changed</h1>
+  </div>
+
+</div>
 
 
   	{% include 'header2' with "Instagram" %}
 
-<!-- {% assign insta_products_top = "
-  SI_Tortoise_Konvoy
-  SI_Black_Konvoy 
-  SI_Black_Fantom  
-  SI_Tortoise_Fantom 
-  SI_Ice_Blue_Heron
-  SI_Dark_Green_Heron 
-" | split: " " %}
-
-{% assign insta_products_bottom = "
-  SI_Ice_Blue_Heron
-  SI_Black_Fantom  
-  SI_Dark_Green_Heron 
-  SI_Tortoise_Fantom 
-  SI_Black_Konvoy 
-  SI_Tortoise_Konvoy 
-" | split: " " %} -->
-
-{% assign insta-classes = "banner-border primary col-xs-4 col-sm-2 no-pads quick-view" %}
-<!-- <div class="row no-margin">
-  {% for product in insta_products_top %}
-    {% assign product_handle = product | downcase | split: "_" | join: "-" %}
-
-
-    {% assign product_obj = all_products[product_handle] %}
-    <a class="{{ insta-classes }}" href="{{ product_obj.url }}" data-pid="{{ product_obj.id }}">
-      {% assign img_parts = product | split: "_" %}
-      {% assign img_letter_1 = img_parts[1] | slice: 0 %}
-      {% assign img_letter_2 = img_parts[2] | slice: 0 %}
-      {% assign img = img_letter_1 | append: img_letter_2 | append: "_1.jpg" %}
-      <img src="{{ img | asset_url }}" alt="{{ product | split: "_" | join: " " }}">
-    </a>
-  {% endfor %}
-</div>
-<div class="row hidden-xs no-margin">
-  {% for product in insta_products_bottom %}
-    {% assign product_handle = product | downcase | split: "_" | join: "-" %}
-
-
-    {% assign product_obj = all_products[product_handle] %}
-    <a class="{{ insta-classes }}" href="{{ product_obj.url }}" data-pid="{{ product_obj.id }}">
-      {% assign img_parts = product | split: "_" %}
-      {% assign img_letter_1 = img_parts[1] | slice: 0 %}
-      {% assign img_letter_2 = img_parts[2] | slice: 0 %}
-      {% assign img = img_letter_1 | append: img_letter_2 | append: "_2.jpg" %}
-      <img src="{{ img | asset_url }}" alt="{{ product | split: "_" | join: " " }}">
-    </a>
-  {% endfor %}
-</div>
- -->
 <script 
 src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab375/grid.js'
  class='snapppt-widget'></script>
@@ -340,7 +103,7 @@ src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab
 //         wH = $(window).height(),
 //         wS = $(this).scrollTop();
 //     if (wS > (hT+hH-wH-350)){
-      $('.odometer').html(3314);
+      $('.odometer').html(3341);
 //     }
   });
 </script>
@@ -381,7 +144,7 @@ src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab
  * @param Array  args     (optional) List of arguments to pass to function func
  */
   $("iframe").ready(function() {
-    sleep(5000).then(function() {
+    sleep(4300).then(function() {
       $(".snptwdgt__ftr").hide();
       $(".snptcrd__ovrly").hide();
     });
