push up shopifys version

--- a/snippets/header2.liquid
+++ b/snippets/header2.liquid
@@ -13,7 +13,7 @@
             <div class="element-icon style2 no-margin">
 
               {% if header2 == "Instagram" %}
-                <h2 class="home-collection">Shop Instagram</h2>
+                <h1 class="">Shop Instagram</h1>
               {% else %}
 <!--                 <h1 class="small-caps hidden-xs hidden-sm">Get Yourself a Gift, As You Give the Gift of Vision</h1>
                 <h3 class="small-caps hidden-md hidden-lg">Get Yourself a Gift, As You Give the Gift of Vision</h2>
