--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -144,9 +144,11 @@ src='https://snapppt.com/widgets/widget_loader/5aae36b1-7142-4fe2-a099-0abc609ab
  * @param Array  args     (optional) List of arguments to pass to function func
  */
   $("iframe").ready(function() {
-    sleep(4300).then(function() {
+    sleep(4100).then(function() {
       $(".snptwdgt__ftr").hide();
       $(".snptcrd__ovrly").hide();
+      $(".snptwdgt__item").attr('style', function(i,s) { return s + ' padding: 5px !important; margin: 0px !important;' })
+      $(".snptwdgt__item .fauximg-bin").attr('style', 'border-radius: 0px !important;')
     });
   });
 </script>
