add optemetry page

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -456,7 +456,40 @@ hr.highlight {
   font-size: 48px;
 }
 /* End Charity Page Styles */
-
+/* Start Optometry Page */
+.optometry-pic {
+  background-image: url({{ "opt-top.jpg" | file_url }});
+}
+.timeline-title {
+  clear: both;
+  text-align: center;
+  font-weight: bolder;
+  font-size: 24px;
+  margin-bottom: -20px;
+  margin-top: 20px;
+}
+.timeline-title small {
+  margin-top: 5px;
+  font-variant: small-caps;
+}
+@media (min-width: 992px) {
+  .timeline-title {
+    font-size: 36px;
+    margin-bottom: -80px;
+  }
+}
+span.doc-donate {
+  font-weight: bolder;
+}
+.timeline-footer {
+  font-size: 18px;
+}
+@media (min-width: 992px) {
+  .timeline-footer {
+    font-size: 24px;
+  }
+}
+/* End Optometry Page */
 /* Start Home Page Styles */
 .sale-section {
   clear: both;
