new summer promo code

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -235,7 +235,7 @@ hr.highlight {
 }
 .site-banner {
   height: 50px;
-  background-color: #2bc881;
+  background-color: #01dddd;
   font-size: 17px;
   position: fixed;
   top: 0px;
