--- a/snippets/product-simple.liquid
+++ b/snippets/product-simple.liquid
@@ -80,7 +80,7 @@
 
           {% if product.price > 7000 %}
           <br />
-          <p class="no-margin"><span class="small-caps">Use Code:</span> <code>sprng</code></p>
+          <p class="no-margin"><span class="small-caps">Use Code:</span> <code>summertime</code></p>
           <h6>10% Off Classic Pairs<h/6>
           {% endif %}
           
