--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -64,7 +64,7 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
   <div class="text-center site-banner full-w row-eq-height hidden-xs minor-h-pads">
     <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.
       Get ready for Spring, <span style="border-bottom: 1px solid black;">10% off all classic product lines</span>.
-      <small>use code:</small> <code class="blue" style="background-color: rgb(116, 216, 171);"><strong>sprng</strong></code>
+      <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>summertime</strong></code>
     </p>
     <button class="close-box" type="button" data-dismiss="modal" aria-hidden="true">×</button>
   </div>
@@ -72,7 +72,7 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
   <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
     <small>
       <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.</p>
-      <p class="v-center"><small><span style="border-bottom: 1px solid black;">10% off classics.</span> <small>use code:</small> <code class="blue" style="background-color: rgb(116, 216, 171);"><strong>sprng</strong></code></small></p>
+      <p class="v-center"><small><span style="border-bottom: 1px solid black;">10% off classics.</span> <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>summertime</strong></code></small></p>
     </small>
     <button type="button" class="close-box" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -40px;">×</button>
   </div>
