--- a/snippets/pillars.liquid
+++ b/snippets/pillars.liquid
@@ -14,6 +14,21 @@
 </div>
 
 <div class="pillar hidden-xs">
+  <a class="full-w" href="/pages/kalani" title="shop kalani">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="border-left-width: 3.5px;">
+      <img src="{{ 'shop-kalani.jpg' | file_url }}" alt="Shop Kalani">
+      <div class="panel-body text-center">
+        <div class="pillar-cover row-eq-height">
+          <div class="v-center full-w">
+            <h2 class="white"><strong>SHOP KALANI</strong></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
+<div class="pillar hidden-xs">
   <a class="full-w" href="/pages/find-your-face" title="shop instagram">
     <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp" style="border-left-width: 6.5px; border-right-width: 6.5px;">
       <img src="{{ 'find-your-face.jpg' | file_url }}" alt="Find Your Face">
@@ -27,22 +42,6 @@
     </div>
   </a>
 </div>
-
-<div class="pillar hidden-xs">
-  <a class="full-w" href="/pages/collaborate" title="fello collaboration">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="border-left-width: 3.5px;">
-      <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Ambassador">
-      <div class="panel-body text-center">
-        <div class="pillar-cover row-eq-height">
-          <div class="v-center full-w">
-            <h2 class="white"><strong>COLLABORATE</strong></h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </a>
-</div>
-
 
 <!-- SMALL SCREENS -->
 <div class="pillar hidden-sm hidden-md hidden-lg">
@@ -88,7 +87,7 @@
 </div>
 
 <div class="pillar hidden-sm hidden-md hidden-lg">
-  <a class="full-w" href="/pages/collaborate" title="fello collaboration">
+  <a class="full-w" href="/pages/kalani" title="shop kalani">
     <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="
       border: none;
       margin: auto;
@@ -96,11 +95,11 @@
       padding: 10px;
       clear: both;
       ">
-      <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Ambassador">
+      <img src="{{ 'shop-kalani.jpg' | file_url }}" alt="Shop Kalani">
       <div class="panel-body text-center">
         <div class="pillar-cover row-eq-height">
           <div class="v-center full-w">
-            <h2 class="white"><strong>COLLABORATE</strong></h2>
+            <h2 class="white"><strong>SHOP KALANI</strong></h2>
           </div>
         </div>
       </div>
