--- a/snippets/shop-sale.liquid
+++ b/snippets/shop-sale.liquid
@@ -11,7 +11,7 @@
   <div class="shop-sale col-xs-offset-2" style="clear: both; padding-top: 190px;">
     <h1 class="no-margin" style="line-height: 0.85; font-weight: 700;">
       $10<span style="vertical-align: text-top;">+</span> OFF<br />
-      <span class="small-caps"><small>all classic & bamboo models</small></span>
+      <span class="small-caps"><small>all classic models</small></span>
     </h1>
     <br />
     <a href="/collections/all", title="Shop Sale">
@@ -34,7 +34,7 @@
     ">
     <h1 class="no-margin" style="line-height: 0.85; font-weight: 700;">
       $10<span style="vertical-align: text-top;">+</span> OFF<br />
-      <span class="small-caps"><small>all classic & bamboo models</small></span>
+      <span class="small-caps"><small>all classic models</small></span>
     </h1>
     <br />
     <a href="/collections/all", title="Shop Sale">
