kalani nav, mobile cta

--- a/snippets/menu_import.liquid
+++ b/snippets/menu_import.liquid
@@ -101,7 +101,7 @@
             </li>
       {% else %}
         <li class="{% if link.active %}active{% endif %}">
-          <a href="{{ link.url }}">{{ link.title }}</a>
+          <a href="{{ link.url }}" style="{% if link.url contains 'kalani' %}color: #f06eaa; font-weight: bolder;{% endif %}">{{ link.title }}</a>
         </li>
       {% endif %}
     {% assign position = position | plus :1 %}
