--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -33,8 +33,8 @@
 
   <img class="hidden-xs" src="{{ 'blurred-vision-angle.jpg' | file_url }}" alt="Fello Eyewear">
   
-  <a href="/collections/all" title="shop" id="for-ios" class="hidden visible-xs">
-    <img class="full-w" src="{{ 'fello-eyewear-welcome.jpg' | file_url }}" alt="Fello Eyewear">
+  <a href="/pages/kalani" title="shop kalani" id="for-ios" class="hidden visible-xs">
+    <img class="full-w" src="{{ 'kalani-front-pg-tk-2.jpg' | file_url }}" alt="Shop Kalani">
   </a>
 </div>
 
