--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -18,8 +18,11 @@
   {% assign sold_out = false %}
 {% endif %}
 
-<li class="product-item view-grid {{grid_item_width}} {% if product.title == 'Tortoise Fantom' %}clear-for-ff{% endif %}" style="display: list-item;">
+<li class="product-item view-grid {{grid_item_width}}" style="display: list-item;">
   <div class="product-inner">
+    {% if product.title contains 'Kalani' %}
+      <h3 style="position: absolute; font-family: fantasy, serif; color: #1fa7d6;">NEW</h3>
+    {% endif %}
     <div class="product-thumb has-back-image">
       
       {% if product.available %}
