recent buy kalani

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -203,6 +203,7 @@ hr.highlight {
   position: fixed;
   left: 1%;
   bottom: 1%;
+  z-index: 1000;
 }
 #recent-buy h3 {
   color: #1fa7d6 !important;
