--- a/snippets/currencies.liquid
+++ b/snippets/currencies.liquid
@@ -3,14 +3,18 @@
 Currency.format = '{{ settings.currency_format | default: 'money_with_currency_format' }}';
 var shopCurrency = '{{ shop.currency }}';
 /* Sometimes merchants change their shop currency, let's tell our JavaScript file */
-Currency.moneyFormats[shopCurrency].money_with_currency_format = {{ shop.money_with_currency_format | strip_html | json }};
-Currency.moneyFormats[shopCurrency].money_format = {{ shop.money_format | strip_html | json }};
+try {
+  Currency.moneyFormats[shopCurrency].money_with_currency_format = {{ shop.money_with_currency_format | strip_html | json }};
+  Currency.moneyFormats[shopCurrency].money_format = {{ shop.money_format | strip_html | json }};
+} catch (e) {}
   
 /* Default currency */
 var defaultCurrency = '{{ settings.default_currency | default: shop.currency }}';
   
 /* Cookie currency */
-var cookieCurrency = Currency.cookie.read();
+try {
+  var cookieCurrency = Currency.cookie.read();
+} catch (e) {}
 /* Fix for customer account pages */
 jQuery('span.money span.money').each(function() {
   jQuery(this).parents('span.money').removeClass('money');
