--- a/templates/page.collaborations.liquid
+++ b/templates/page.collaborations.liquid
@@ -10,6 +10,9 @@
   </h4>
   
   <p class="text-center med-h-pads visible-xs">
-    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate
+    Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate.
+    <br />
+    <br />
+    We are excited to speak with you.
   </p>
 </div>
