--- a/snippets/pillars.liquid
+++ b/snippets/pillars.liquid
@@ -1,11 +1,11 @@
 <div class="pillar hidden-xs">
-  <a class="full-w" href="/collections/bamboo" title="shop instagram">
+  <a class="full-w" href="/pages/collaborate" title="collaborate with Fello">
     <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp" style="border-right-width: 3.5px;">
-      <img src="{{ 'shop_bamboo.jpg' | asset_url }}" alt="Shop Bamboo">
+      <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Collaboration">
       <div class="panel-body text-center">
         <div class="pillar-cover row-eq-height">
           <div class="v-center full-w">
-            <h2 class="white"><strong>SHOP BAMBOO</strong></h2>
+            <h2 class="white"><strong>COLLABORATE</strong></h2>
           </div>
         </div>
       </div>
@@ -45,7 +45,7 @@
 
 <!-- SMALL SCREENS -->
 <div class="pillar hidden-sm hidden-md hidden-lg">
-  <a class="full-w" href="/collections/bamboo" title="shop instagram">
+  <a class="full-w" href="/pages/collaborate" title="collaborate with Fello">
     <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="
       border: none;
       margin: auto;
@@ -53,11 +53,11 @@
       padding: 10px;
       clear: both;
       ">
-      <img src="{{ 'shop_bamboo.jpg' | asset_url }}" alt="Shop Bamboo">
+      <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Collaboration">
       <div class="panel-body text-center">
         <div class="pillar-cover row-eq-height">
           <div class="v-center full-w">
-            <h2 class="white"><strong>SHOP BAMBOO</strong></h2>
+            <h2 class="white"><strong>COLLABORATE</strong></h2>
           </div>
         </div>
       </div>
